# QtCloudBackup

./: CMakeLists.txt  LICENSE  README.md
platform/apple/: QtCloudBackup.entitlements.template
src/: backupinfo.h  backupvalidation.h  cloudbackupbackend.h  cloudbackupmanager.cpp  cloudbackupmanager.h  retentionevaluator.cpp  retentionevaluator.h  retentionpolicy.h
src/platform/apple/: appleicloudbackend.h  appleicloudbackend.mm
src/platform/fallback/: localbackend.cpp  localbackend.h
src/platform/windows/: windowsonedrivebackend.cpp  windowsonedrivebackend.h
tools/: test_retention.cpp
